--- a/eliora/src/components/WebsiteDevelopmentPageComponents/Frequently.css
+++ b/eliora/src/components/WebsiteDevelopmentPageComponents/Frequently.css
@@ -72,3 +72,31 @@
   .faq .faq-list a.collapsed .icon-close {
     display: none;
   }
+
+
+  @media (max-width: 1200px) {
+    .faq .faq-list {
+      padding: 0;
+    }
+     .testimonials-section {
+              /* /background: #fff;/ */
+              height: 582px;
+              position: relative;
+              overflow: hidden;
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-flex-flow: row nowrap;
+              -ms-flex-flow: row nowrap;
+              flex-flow: row nowrap;
+              -webkit-box-align: end;
+              -webkit-align-items: flex-end;
+              -ms-flex-align: end;
+              align-items: flex-end;
+              -webkit-box-pack: center;
+              -webkit-justify-content: center;
+              -ms-flex-pack: center;
+              justify-content: center;
+      }
+}
