Responsive Changes done on Home Page

--- a/eliora/src/components/PlacementPageComponents/ITServices.css
+++ b/eliora/src/components/PlacementPageComponents/ITServices.css
@@ -16,3 +16,11 @@
     font-size: 15px;
     color: #848484;
 }
+
+@media only screen and (max-width: 769px){
+
+.mt-c {
+    margin-top: -15% !important;
+}
+
+}
