--- a/eliora/src/style/ServiceSection.module.css
+++ b/eliora/src/style/ServiceSection.module.css
@@ -62,3 +62,12 @@
     font-size: 25px;
     font-weight: 600;
 }
+
+
+@media only screen and (max-width: 769px){
+
+    .service {
+        margin-top: -10% !important;
+    }
+    
+    }
