--- a/eliora/src/components/GoToTop.css
+++ b/eliora/src/components/GoToTop.css
@@ -1,29 +1,33 @@
-.section{
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+.back-to-top {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  right: 16px;
+  bottom: 15px;
+  z-index: 996;
+  background: #e03a3c;
+  width: 50px;
+  height: 50px;
+  border-radius: 4px;
+  transition: all 0.4s;
 }
 
-.ButtonScroll {
-    font-size: 2.4rem;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    position: fixed;
-    bottom: 2rem;
-    right: 2rem;
-    z-index: 999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
+.back-to-top .arrow {
+  font-size: 28px;
+  line-height: 0;
+  background: none;
+  box-shadow: none;
+  color: white;
+  font-size: 35px;
+}
 
-  @media (max-width:999px) {
-    .ButtonScroll {
-      right: 0;
-      left: 80%;
-    }
-  }
+.back-to-top:hover {
+  background: #e65d5f;
+  
+}
+
+.back-to-top.active {
+  visibility: visible;
+  opacity: 1;
+}
+
